<resources>
    <string name="app_name">ElevatorMaintenance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="activity_login">登录</string>
    <string name="activity_title_fstep">步骤1</string>
    <string name="activity_title_sstep">步骤2</string>
    <string name="activity_title_tstep">步骤3</string>
    <string name="activity_title_mission_detail">任务详情</string>
    <string name="start_mission">开始任务</string>
    <string name="next_step">下一步</string>
    <string name="list_empty">列表为空</string>
    <string name="pay_tips"></string>
    <string name="comment_list_empty">还没有评论哦，快来抢沙发吧~</string>
    <string name="net_no_tv">你的网络有问题哦</string>
    <string name="load_fail">加载失败</string>

    <string name="no_result">没有结果</string>
    <string name="elevator_location">电梯位置</string>

</resources>
